# CHIP-8-emulator

./: CMakeLists.txt  README.md  build.bat  chip8.cpp  chip8.data  chip8.h  chip8.html  chip8.js  chip8.wasm  main.cpp  platform_layer.cpp  platform_layer.h
